Все первое задание + недопиленное 2
МС-1:
1) Регистрация нового клиента (POST-запрос)
a. Проверка на черные списки
b. Регистрация (создание Client)
c. Создание User (ответ на запрос)
2) Управление продуктами (POST-запрос) (CRUD)
3) Управление продуктами клиентского портфеля (CRUD)
a. DC, CC, NS, PENS
i. Отправка сообщения в топик client_products
b. IPO, PC, AC
i. Отправка сообщения в топик client_credit_products
4) Принимает запрос на создание карты к определенному счету
a. Отправляет запрос с необходимой информацией в топик client_cards
МС-2
1. Слушает топик client_products
a. При получении сообщения создает продукт
2. Слушает топик client_transactions
3. Слушает топик client_cards
a. При получении сообщения создает карту, если счет не заблокирован
МС-3
- Сущности ProductRegistry добавить атрибут monthCount.
1. Слушает топик client_credit_products
a. Условная проверка clientId
i. Обращение к МС-1, GET-запрос за ФИО и номером документа
ii. «Принятие решения»:
1. Если есть существующие кредитные продукты (A, B …), и новый
желаемый продукт в сумме (A + B + C) выходит за лимит N,
устанавливаемый в конфиге, то отказать.
2. Если есть существующие кредитные продукты И новый продукт в
суммарной задолженности по продуктам НЕ выходит за лимит И по
текущим были просрочки, то отказать.
3. Если просрочек в прошлом не было и запрашиваемая сумма
укладывается в лимит N – одобрить.
iii. Отказ или переход к открытию продукта
b. Открытие продукта
c. Создание графика ежемесячных платежей на основе ставки, количества месяцев:

--- a/first-homework/account-processing/src/main/resources/application.yml
+++ b/first-homework/account-processing/src/main/resources/application.yml
@@ -24,15 +24,20 @@ spring:
 
   kafka:
     bootstrap-servers: localhost:9092
-    producer:
-      key-serializer: org.apache.kafka.common.serialization.StringSerializer
-      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
     consumer:
-      group-id: client-group
+      group-id: account-processing-group
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
     properties:
       spring.json.trusted.packages: "*"
+      spring.json.ignore-unknown-fields: true
 
 server:
   port: 8081
+
+
+kafka:
+  topic:
+    client-products: "client_products"
+    client-cards: "client_cards"
+    client-transaction: "client_transactions"
