--- a/first-homework/client-processing/src/main/resources/application.yml
+++ b/first-homework/client-processing/src/main/resources/application.yml
@@ -24,13 +24,6 @@ spring:
 
   kafka:
     bootstrap-servers: localhost:9092
-    producer:
-      key-serializer: org.apache.kafka.common.serialization.StringSerializer
-      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
-    consumer:
-      group-id: client-group
-      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
     properties:
       spring.json.trusted.packages: "*"
 
@@ -39,7 +32,7 @@ server:
 
 kafka:
   topic:
-    client-products: "client-products"
-    client-cards: "client-cards"
+    client-products: "client_products"
+    client-cards: "client_cards"
     credit-products: "client_credit_products"
 
