--- a/first-homework/account-processing/src/main/resources/application.yml
+++ b/first-homework/account-processing/src/main/resources/application.yml
@@ -26,7 +26,7 @@ spring:
     bootstrap-servers: localhost:9092
     consumer:
       group-id: account-processing-group
-      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      key-deserializer:  org.apache.kafka.common.serialization.UUIDDeserializer
       value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
     properties:
       spring.json.trusted.packages: "*"
@@ -41,3 +41,4 @@ kafka:
     client-products: "client_products"
     client-cards: "client_cards"
     client-transaction: "client_transactions"
+    client-payments: "client_payments"
