Задание 4 1. Разработать annotation based аспект @LogDatasourceError: a. При возникновении исключения отправляет в топик service_logs сообщение: i. В качестве ключа название микросервиса ii. В заголовок передать пару String type, String value. В качестве значения использовать ERROR, WARNING, INFO iii. В сообщении (json-формат) передать: timestamp, сигнатуру метода, стектрейс исключения, текст исключения, входные параметры метода, если таковые имеются b. Если топик недоступен для записи или отправка не получилась, то аналогичное сообщение записать в таблицу БД error_log c. Вывести информацию об ошибке в лог консоли 2. Разработать аспект @HttpOutcomeRequestLog (AfterReturnig) для методов, реализующих отправку http-запросов. a. В качестве ключа - название микросервиса b. В заголовке сообщения type = INFO c. В сообщении timestamp, сигнатура метода, URI запроса, параметры, тело 3. Разработать Before-аспект @HttpIncomeRequestLog с аналогичной информацией из п.2 Задание выполнил в отдельном модуле,сделал его стартером и протестил в client-processing модуле.

--- a/first-homework/logging-starter/src/main/resources/application.yml
+++ b/first-homework/logging-starter/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: client-processing
+    name: logging-starter
   autoconfigure:
     exclude:
       - org.springframework.boot.autoconfigure.r2dbc.R2dbcAutoConfiguration
@@ -30,12 +30,6 @@ spring:
       spring.json.trusted.packages: "*"
 
 server:
-  port: 8082
+  port: 8084
 
-kafka:
-  topic:
-    client-products: "client_products"
-    client-cards: "client_cards"
-    credit-products: "client_credit_products"
-    service-log: "service_logs"
 
