Задание 5: Разработать аспект @Metric:
- Измеряет время работы метода

- Если время работы метода выше лимита, установленного в конфиге:

- Отправить сообщение в топик Кафки service_logs с информацией о сигнатуре метода, тип - WARNING, временем работы, входными параметрами, если таковые имеются

- Лимит выполнения устанавливается в application.yml

Разработать аспект @Cached

- Кэширует записи из БД

- Перед выполнением запроса в БД кэш должен проверяться на наличие нужной записи

- Если таковой нет - сделать запрос

- В качестве ключа - primary key, если хранилище индивидуально под сущность, или hashCode объекта, если кэш общий

- Время хранения записи в кэше задать в application.yml

- По истечению времени запись должна удаляться из кэша

Так же чуть рефакторинг

--- a/first-homework/account-processing/src/main/resources/application.yml
+++ b/first-homework/account-processing/src/main/resources/application.yml
@@ -35,10 +35,16 @@ spring:
 server:
   port: 8081
 
-
 kafka:
   topic:
     client-products: "client_products"
     client-cards: "client_cards"
     client-transaction: "client_transactions"
     client-payments: "client_payments"
+
+fraud_detection:
+  max_transactions: 5
+  period: 10
+
+payment_schedule_service:
+  min_payment_rate: 0.1
