--- a/first-homework/client-processing/src/main/resources/application.yml
+++ b/first-homework/client-processing/src/main/resources/application.yml
@@ -29,6 +29,11 @@ spring:
     properties:
       spring.json.trusted.packages: "*"
 
+  data:
+    redis:
+      host: localhost
+      port: 6379
+
 server:
   port: 8082
 
